# HydroMemory

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.claude/hooks/: session-start.sh
docs/: README.md  architecture.md  audit-2026-05-25.md  canonical.md  closing-the-gaps.md  dependency-licenses.md  event-bus.md  governance-policy.md  hql-grammar.md  integration-levels.md  real-models.md  schema-reference.md  sdk.md  vault.md  verb-reference.md
evals/: README.md  __init__.py  consolidation.py  datasets.py  harness.py  longmemeval.py  metrics.py  multihop.py  multihop_qa.py  packing.py  pollution.py  run.py  scale.py
hydromemory/: __init__.py  activation.py  cli.py  config.py  contamination.py  engine.py  forgetting.py  onboarding.py  packing.py  phases.py  pipeline.py  protocol.py  reader.py  recall.py  reservoirs.py  scheduler.py  schema.py  server.py  triggers.py  verbs.py
scripts/: validate_claude.py
tests/: conftest.py  test_a_intelligence.py  test_a_storage.py  test_activation.py  test_ann_index.py  test_b_hql.py  test_b_phases.py  test_b_pipeline.py  test_b_recall.py  test_b_triggers.py  test_b_verbs.py  test_c_agents.py  test_c_contamination.py  test_c_forgetting.py  test_c_governance.py  test_canonical_envelope.py  test_canonical_jsonschema.py  test_canonical_projection.py  test_canonical_verbs.py  test_claude_backend.py  test_cli_init.py  test_cli_vault.py  test_cognitive_bus.py  test_consolidation.py  test_decay.py  test_example_a.py  test_example_b.py  test_example_c.py  test_example_d.py  test_example_e.py  test_example_f.py  test_l1_app_scoping.py  test_l2_user_vault.py  test_l3_mesh.py  test_l4_grants.py  test_local_backend.py  test_mesh_consolidation.py  test_packing.py  test_phase0_contracts.py  test_phase2_integration.py  (+14 more)
(+114 files in other folders)
